# 2015_Skaere

./: CMakeLists.txt  InterfaceToC.cpp  InterfaceToC_MPI.cpp  Makefile  Metrics.cpp  Metrics.hpp  README.md  Section.hpp  SectionsTrace.cpp  SectionsTrace.hpp  SectionsTrace.impl.hpp  SectionsTraceToDot.cpp  SectionsTraceToDot.hpp  SectionsTraceToDot.impl.hpp  StackTrace.cpp  StackTrace.hpp  Stats.hpp  Timing.cpp  Timing.hpp  userRunTime.hpp  userRunTime.impl.hpp
Dependency_betwee_tasks/: Makefile  main.cpp  tareador-mcxx_main.cpp
Dependency_betwee_tasks/.tareador_precomputed_main/: log_execution_deep_fast.txt  log_objects_deep_fast.txt
Dependency_betwee_tasks/.tareador_precomputed_main/.tareador_gui_intermediate/cut_28111f5f/: decompositions_history.txt  graph_decompositions_history.xdot
Dependency_betwee_tasks/.tareador_precomputed_main/.tareador_gui_intermediate/cut_28111f5f/D_4e97fef6/: decomposition_configuration.cfg  dependency_graph.dot  dim.dim  log_dependencies.out  log_object_usage_deplist.out  log_object_usage_tasklist.out  log_selected_object_instances.out  object_offsets.out  pcf_tasknames.pcf  realized_tasks.out  task_criticalness_cores4_pl1.0_pd1.0_pc3.0.out  tasks_log.out  trf_superscalar.trf
Dependency_betwee_tasks/.tareador_precomputed_main/.tareador_gui_intermediate/cut_28111f5f/D_4e97fef6/simulations/: MN_4cores.cfg  output_4cores.out  prv_4cores.pcf  prv_4cores.prv
Dependency_betwee_tasks/.tareador_precomputed_main/.tareador_gui_intermediate/cut_28111f5f/D_4e97fef6/tmp_paramedir_output/: 2DH-tasks_concurrency_function[main.cpp.11].cfg  2DH-tasks_concurrency_function[main.cpp.11].out  2DH-tasks_concurrency_function[main.cpp.14].cfg  2DH-tasks_concurrency_function[main.cpp.14].out  2DH-tasks_concurrency_wait.cfg  2DH-tasks_concurrency_wait.out  2DH-tasks_duration.out
log/: blankLog.hpp  extraLog.hpp  fullLog.hpp
runtime_PAPI/: CMakeLists.txt  InterfaceToC_Papi.cpp  MetricsPapi.cpp  MetricsPapi.hpp  skaereRunTime.hpp  skaereRunTime.impl.hpp  userRunTimePapi.impl.hpp  userRuntimePapi.cpp  userRuntimePapi.hpp
runtime_Testing/: CMakeLists.txt  InterfaceToC_Testing.cpp  MetricsTesting.cpp  MetricsTesting.hpp  skaereRunTime.cpp  skaereRunTime.hpp  skaereRunTime.impl.hpp  userRunTimeTesting.impl.hpp  userRuntimeTesting.cpp  userRuntimeTesting.hpp
